--- a/www/index.html
+++ b/www/index.html
@@ -21,18 +21,24 @@
     <body>
         <center>
             <h1>Select an Image</h1>
+            <!-- Add a label that tells if files have been selected, or if none has been selected -->
             <input class="app" type="file" id="fileSelector">
-                <!--Replace these with uploading status later -->
-                <!-- <div id="deviceready" class="blink">
-                    <p class="event listening">Connecting to Device</p>
-                    <p class="event received">Device is Ready</p>
-                </div> -->
             </input>
-            <button id="clickSubmit" onclick="displayImage(event)">Upload!</button>
+            <div class="image-preview" id="imagePreview">
+                <img src="" alt="Image Preview" class="image-preview__image">
+                <span class="image-preview__default-text">Image Preview</span>
+            </div>
+            <div id="result"></div>
+            <button id="clickSubmit">Remove background!</button>
             <img src="" alt="" id="showImg">
         </center>
+        
         <script src="cordova.js"></script>
         <script src="js/fileScript.js"></script>
         <script src="js/index.js"></script>
+        <script src="js/removeBackground.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
